--- a/app/assets/stylesheets/iteration.scss
+++ b/app/assets/stylesheets/iteration.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Iteration controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+#content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item-list {
+  border: 1px solid darkgray;
+  padding: 10px 30px;
+  margin: 20px;
+  width: 30%;
+
+  li {
+    list-style-type: none;
+  }
+}
+
+p {
+  color: #685206;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  line-height: 24px;
+  margin: 0 0 24px;
+  text-align: justify;
+  text-justify: inter-word;
+}
