--- a/app/views/iteration/list.html.erb
+++ b/app/views/iteration/list.html.erb
@@ -11,6 +11,9 @@
       <b>
          <%= link_to 'Edit', {:action => "edit", :id => c.id} %>
       </b>
+      <b>
+         <%= link_to "Delete", {:action => 'delete', :id => c.id}, data:{ confirm: "Are you sure you want to delete this item?", :disable_with => "Processing..."} %>
+      </b>
    </li>
    <% end %>
 </ul>
