--- a/app/views/iteration/show.html.erb
+++ b/app/views/iteration/show.html.erb
@@ -5,6 +5,22 @@
     <strong>End Date: </strong><%= @iteration.end_date %><br />
     <strong>Created Date: </strong><%= @iteration.created_at %><br />
 </p>
+<ul id = "objectives" class="item-list">
+   <% @iteration.objectives.each do |c| %>
+    <li>
+        <%= link_to display_objective_name(c), {:controller => "objective", :action => 'show', :id => c.id} %>
+        <p><%= c.description %></p>
+        <b>
+            <%= link_to 'Edit', {:action => "edit", :id => c.id} %>
+        </b>
+        <b>
+            <%= link_to "Delete", {:controller => 'objective', :action => 'delete', :id => c.id}, data:{ confirm: "Are you sure you want to delete this item?", :disable_with => "Processing..."} %>
+        </b>
+    </li>
+    <% end %>
+</ul>
+
+<%= link_to "Add Objective", {:controller => "objective", :action => "new", :iteration_id => @iteration.id} %>
 
 <hr />
 
