--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -61,6 +61,36 @@ ul#subjects {
 }
 
 ul#subjects li {
-  display: inline;
+  display: inline-block;
   padding-left: 5px;
+  margin-bottom: 10px;
+}
+
+.inline {
+  display: inline;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: left;
+  
+  > * {
+    margin-right: 5px;
+    margin-bottom: 0;
+  }
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  > * {
+    margin-bottom: 5px;
+  }
 }
