changing a few minor labels

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello</title>
+    <title>OKR</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,7 +13,7 @@
       <div id = "container">
          
          <div id = "header">
-            <h1>OKR Management System</h1>
+            <h1>OKR tracking</h1>
             <h3>Library powered by Ruby on Rails</h3>
          </div>
          <hr>
