--- a/app/views/objective/new.html.erb
+++ b/app/views/objective/new.html.erb
@@ -14,4 +14,4 @@
 <%= submit_tag "Create" %>
 
 <% end -%>
-<%= link_to 'Back', {:action => 'show_iterations', :id => @iteration.id} %>
+<%= link_to 'Back', {:action => 'show_iterations', :iteration_id => @iteration.id} %>
